Eevee doesn't show smoke from a linked collection (Cycles does) #75197

Closed
opened 2020-03-30 01:00:58 +02:00 by Dmitry · 4 comments

System Information
Operating system: Lubuntu 18.04
Graphics card: RX 480

Blender Version
Broken: All 2.8x with the latest 2.83-a24f52c51cff
Worked:

Short description of error
Eevee doesn't show a smoke animation from a linked collection. The domain is just full of smoke. Cycles works fine with it in all tested versions (2.80, 2.81a, 2.82a, 2.83-a24f52c51cff). It seems it doesn't depends on smoke cache type. And it's not a pure volumetric issue.

Linking of smoke domain as an object doesn't show this behavior. Using Library Override helps a little too.

Exact steps for others to reproduce the error

  1. Select the default cube and Object -> Quick Effects -> Quick smoke;

  2. Bake the smoke animation and save the file;

  3. Create a new scene and link that collection with smoke from previously saved file.

The linked smoke isn't shown in Solid view. Material view, Eevee render view and just an Eevee render result show the smoke domain as a cuboid full of smoke. Cycles works fine.

This archive contains the setups for different Blender 2.8x versions I tried. Without caches.
blenderEeveeSmokeTests.7z

**System Information** Operating system: Lubuntu 18.04 Graphics card: RX 480 **Blender Version** Broken: All 2.8x with the latest 2.83-a24f52c51cff Worked: **Short description of error** Eevee doesn't show a smoke animation from a linked collection. The domain is just full of smoke. Cycles works fine with it in all tested versions (2.80, 2.81a, 2.82a, 2.83-a24f52c51cff). It seems it doesn't depends on smoke cache type. And it's not a pure volumetric issue. Linking of smoke domain as an object doesn't show this behavior. Using Library Override helps a little too. **Exact steps for others to reproduce the error** 1) Select the default cube and Object -> Quick Effects -> Quick smoke; 2) Bake the smoke animation and save the file; 3) Create a new scene and link that collection with smoke from previously saved file. The linked smoke isn't shown in Solid view. Material view, Eevee render view and just an Eevee render result show the smoke domain as a cuboid full of smoke. Cycles works fine. This archive contains the setups for different Blender 2.8x versions I tried. Without caches. [blenderEeveeSmokeTests.7z](https://archive.blender.org/developer/F8435895/blenderEeveeSmokeTests.7z)
Author

Added subscriber: @DimaM

Added subscriber: @DimaM

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 8fe448b44d

This issue was referenced by 8fe448b44d1dc8b5e62a293686704d6cb192d2fb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-05-20 16:57:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75197
No description provided.